Created .gitinore and started google images

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="styles/style.css">
-        <title>Search</title>
+        <title>CS50W Google</title>
     </head>
     <body>
         <div class="navBarContainer">
@@ -20,7 +20,7 @@
                 </div>
                 <div id="buttonContainer">
                     <input type="submit" value="Google Search" class="button">
-                    <input type="submit" value="I'm Feeling Lucky" class="button">
+                    <input type="submit" value="I'm Feeling Lucky" class="button" name="btnI">
                 </div>
             </form>
             <div id="offerContainer">
