--- a/image-search.html
+++ b/image-search.html
@@ -18,6 +18,7 @@
                 <div class="searchBoxContainer">
                     <div id="magGlass">&#128269</div>
                     <input type="text" name="q" class="searchBox">
+                    <input name="tbm" value="isch" type="text" hidden>
                 </div>
                 <div id="buttonContainer">
                     <input type="submit" value="Google Search" class="button">
